kubernetes/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    app: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        app: node
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: app-config
            - secretRef:
                name: app-secrets
          image: node:22
          name: node-compose
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
