kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node_compose
                port:
                  number: 3000
